<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_threshold_title"
        android:key="pref_key_response_time">
        <EditTextPreference
            android:key="pref_normal_time_response"
            android:title="@string/lower_threshold_time"
            android:summary="@string/pref_threshold_unit"
            android:defaultValue="100"
            android:numeric="integer"
            android:inputType="number"
            />
        <EditTextPreference
            android:key="pref_high_time_response"
            android:title="@string/upper_threshold_time"
            android:summary="@string/pref_threshold_unit"
            android:defaultValue="300"
            android:numeric="integer"
            android:inputType="number" />

        <PreferenceScreen
            android:title="@string/pref_compartir"
            android:key="pref_compartir"
            android:summary="@string/pref_compartir_ayuda">
        </PreferenceScreen>


        <PreferenceScreen

            android:key="@string/key_platita_vieja"
            android:summary="@string/summary_header_money"
            android:icon="@drawable/ic_sync_black"
            android:title="@string/pref_header_money" />

    </PreferenceCategory>
</PreferenceScreen>
