<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- view for AdMob Banner Ad -->
            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                ads:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:text="@string/test_case"
                        android:textColor="@color/colorPrimaryDark"/>
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/list_test_cases"
                        android:hint="@string/test_case" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                ads:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/server_name"
                        android:layout_marginLeft="3dp"
                        android:textColor="@color/colorPrimaryDark"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:id="@+id/text_server_name"
                        android:hint="@string/server_name"
                        android:textColor="@color/colorPrimaryDark"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/server_address"
                                android:layout_marginLeft="3dp"
                                android:textColor="@color/colorPrimaryDark"/>
                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="3dp"
                                android:id="@+id/text_radius_ip_address"
                                android:hint="@string/server_address"
                                android:textSize="18sp"
                                android:textColor="@color/colorPrimaryDark"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="3">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/auth_port"
                                android:textColor="@color/colorPrimaryDark"/>

                            <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/text_radius_auth_port"
                                android:inputType="number"
                                android:hint="@string/auth_port"
                                android:text="@string/auth_port_value"
                                android:textColor="@color/colorPrimaryDark"/>

                        </LinearLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/server_secret"
                            android:layout_marginLeft="3dp"
                            android:textColor="@color/colorPrimaryDark"/>

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/text_radius_secret"
                            android:hint="@string/server_secret"
                            android:textColor="@color/colorPrimaryDark"/>
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                ads:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="3dp"
                            android:text="@string/attr_user_name"
                            android:textColor="@color/colorPrimaryDark"/>

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="3dp"
                            android:id="@+id/text_radius_username"
                            android:hint="@string/attr_user_name"
                            android:textColor="@color/colorPrimaryDark"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="3dp"
                            android:text="@string/attr_user_password"
                            android:textColor="@color/colorPrimaryDark"/>

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="3dp"
                            android:id="@+id/text_radius_password"
                            android:hint="@string/attr_user_password"
                            android:textColor="@color/colorPrimaryDark"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/button_auth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/auth_text"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                ads:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimaryDark"/>

                        <TextView
                            android:id="@+id/text_radius_response_lbl"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/label_response"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimaryDark"/>

                        <TextView
                            android:id="@+id/text_time_response_lbl"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:soundEffectsEnabled="false"
                            android:text="@string/label_time"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimaryDark"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/image_response"
                            android:textAlignment="center"
                            android:layout_weight="2"/>

                        <ProgressBar
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textAlignment="center"
                            android:indeterminate="true"
                            android:id="@+id/progress_auth"
                            android:visibility="gone"/>

                        <TextView
                            android:id="@+id/text_radius_response"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            style="@style/responseText"
                            android:textAlignment="center"
                            android:textSize="18sp"
                            android:textColor="@color/colorPrimaryDark"/>

                        <TextView
                            android:id="@+id/text_time_response"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:soundEffectsEnabled="false"
                            style="@style/responseTime"
                            android:textAlignment="center"
                            android:textSize="18sp"
                            android:textColor="@color/colorPrimaryDark"/>
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                ads:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/text_radius_reply_message_lbl"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/label_reply_message"
                            android:textAlignment="textStart"
                            android:layout_marginLeft="4dp"
                            android:textColor="@color/colorPrimaryDark"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/text_radius_reply_message"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            style="@style/responseText"
                            android:textAlignment="textStart"
                            android:layout_marginLeft="4dp"
                            android:textSize="18sp"
                            android:textColor="@color/colorPrimaryDark"/>

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</FrameLayout>